--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,36 @@
+body {
+    background-image: url('Imagenes/imagen_fondo.jpg'); 
+    background-size: cover; 
+}
+
 h1{
-    color: #272727;
+    color:grey;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: right;
+}
+h2{
+    color:grey;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: right;
+}
+nav{
+    color:antiquewhite;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: left;
+    font-size:larger;
+}
+
+a{
+    color:antiquewhite;
+}
+
+.info{
+    font-style: unset;
+    font-size: large;
+    text-align: right;
+    float: right;
+    width: 60%;
+    color:grey;
 }
 
 .logo {
@@ -13,6 +44,58 @@ h1{
     align-items: center;
 }
 
-.textos {
-    margin-left: 20px; 
+.info2 {
+    background-color: black;
+    color:grey;
+    font-size: large;
+    text-align: center;
+    position: absolute;
+    top: 70%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+
+}
+
+.ingresar {
+    color:grey;
+    font-size: x-large;
+    text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+}
+
+button{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: large;
+    color:black;
+
+
+
+}
+
+
+
+
+.opciones {
+    color:antiquewhite;
+    top: 80%;
+    width: 100%; 
+    text-align: center;
+    position: fixed;
+
+}
+
+.cuadro {
+    background-color: rgba(128, 128, 128, 0.753);
+    font-size: large;
+    font-style:normal;
+    width: 30%; 
+    height: 60px; 
+    border-style: groove;
+    border-radius: 4px;
+    border-color: antiquewhite; 
+    display: inline-block; 
+    margin: 0 5px; 
 }
