--- a/estilo.css
+++ b/estilo.css
@@ -27,7 +27,7 @@ a{
 .info{
     font-style: unset;
     font-size: large;
-    text-align: right;
+    text-align: center;
     float: right;
     width: 60%;
     color:grey;
@@ -61,7 +61,7 @@ a{
     font-size: x-large;
     text-align: center;
     position: absolute;
-    top: 60%;
+    top: 75%;
     left: 60%;
     transform: translate(-50%, -50%);
 }
