--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -13,9 +12,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-}
 
 /* NAVBAR */
 nav {
@@ -123,7 +119,7 @@ button:hover {
 
 /* IMAGEN DECORATIVA */
 .agrego_im img {
-    max-width: 40px;
+    max-width: 70px;
     height: auto;
     display: block;
     margin: 20px auto 0;
@@ -197,4 +193,10 @@ footer {
     margin-top: 40px;
     border-radius: 0 0 10px 10px;
     font-size: 0.9rem;
+}
+
+canvas#grafico {
+    margin-top: 20px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
 }
